# MERaLiON-3-ASR

./: .gitignore  CHANGELOG.md  LICENSE  pyproject.toml  readme.md
.github/workflows/: codeql.yml  dependency-audit.yml  dependency-review.yml  pylint.yml  scorecard.yml  security.yml  version-matrix-smoke.yml
docs/: backends.md
examples/: _internal_native_vllm_client.py  _internal_native_vllm_serve.sh  http_curl.sh  offline_batch.py  openai_sdk_transcriptions.py  transformers_quickstart.py  vllm_quickstart.py
scripts/: _offline_worker.py  _smoke_sidecar.py  compare_2804_vs_production.py  upload_to_hf.py  validate_against_1505.py  validate_against_2804.py  validate_serve_modes.py  validate_serve_modes_ytb.py  validate_ytb_full_audiobench_norm.py  validate_ytb_multigpu.py  validate_ytb_offline_multigpu.py
scripts/_validation_logs/: README.md  compare_2804.txt  serve_mode_validation_2026-05-24.json  serve_mode_validation_ytb_2026-05-24.json  smoke_sidecar_2026-05-25.json  validate_2804.txt  validate_v016.txt
src/meralion_3_asr/: __init__.py  _audio_io.py  chunking.py  gateway.py  meralion_3_asr.py  prompts.py  serve.py
src/meralion_3_asr/_vllm_plugin/: __init__.py  vllm_model.py
src/meralion_3_asr/_vllm_plugin/transformers_utils/: configuration_meralion3.py  modules.py  no_repeat_logits_processor.py  processing_meralion3.py
src/meralion_3_asr/backends/: __init__.py  base.py  transformers_backend.py  vllm_backend.py
src/meralion_3_asr/configs/vllm/: chat_template.jinja  generation_config_overrides.json
tests/: test_chunking.py  test_import.py  test_plugin_registration.py  test_prompts.py  test_serve_and_client.py
